refactor(extended-2.1): update CSS according to BEM

--- a/index.html
+++ b/index.html
@@ -5,58 +5,58 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Todo App</title>
-  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8">
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
+  <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
 
 <body>
-  <div class="aaa">
-    <img src="./eisenhower-matrix.jpg" alt="matrix">
-    <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details ?</a>
+  <div class="matrix">
+    <img class="matrix__img" src="./eisenhower-matrix.jpg" alt="matrix">
+    <a class="matrix__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details ?</a>
   </div>
   <div class="centered-main-page-element">
-    <p id="topSectionForAddingElementToList">
+    <p class="centered-main-page-element__top-section">
       <label for="new-task">Add Item</label>
-    <div class="task-row-wrapper">
-      <input id="new-task" class="task" type="text">
+    <div class="centered-main-page-element__task-row-wrapper task-row-wrapper">
+      <input id="new-task" class="centered-main-page-element__task task" type="text">
       <button>Add</button>
     </div>
     </p>
     <h3>Todo</h3>
-    <ul id="incompleteTasks">
-      <li>
-        <input type="checkbox">
-        <label class="task">Pay Bills</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete">
+    <ul class="centered-main-page-element__list" id="incomplete-tasks">
+      <li class="centered-main-page-element__item">
+        <input type="checkbox" class="centered-main-page-element__checkbox">
+        <label class="centered-main-page-element__task task">Pay Bills</label>
+        <input type="text" class="centered-main-page-element__task task"">
+        <button class=" centered-main-page-element__edit edit">Edit</button>
+        <button class="centered-main-page-element__delete delete">
           <img src="./remove.svg" alt="">
         </button>
       </li>
-      <li class="editMode">
+      <li class="centered-main-page-element__item edit-mode">
         <input type="checkbox">
-        <label class="task">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="task">
-        <button class="edit">Save</button>
-        <button class="delete">
+        <label class="centered-main-page-element__task task">Go Shopping</label>
+        <input type="text" value="Go Shopping" class="centered-main-page-element__task task">
+        <button class="centered-main-page-element__edit edit">Save</button>
+        <button class="centered-main-page-element__delete delete">
           <img src="./remove.svg" alt="">
         </button>
       </li>
     </ul>
     <h3>Completed</h3>
-    <ul id="completed-tasks">
-      <li>
-        <input type="checkbox" checked>
-        <label class="task">See the Doctor</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete">
+    <ul class="centered-main-page-element__list" id="completed-tasks">
+      <li class="centered-main-page-element__item">
+        <input type="checkbox" checked class="centered-main-page-element__checkbox">
+        <label class="centered-main-page-element__task task">See the Doctor</label>
+        <input type="text" class="centered-main-page-element__task task">
+        <button class="centered-main-page-element__edit edit">Edit</button>
+        <button class="centered-main-page-element__delete delete">
           <img src="./remove.svg" alt="">
         </button>
       </li>
     </ul>
   </div>
-  <script type="text/javascript" src="app.js"></script>
+  <script src="app.js"></script>
 </body>
 
 </html>
